# homelabmonitor

./: .gitignore  main.py  pyproject.toml
